Replace Python nREPL client with babashka mcp-nrepl tooling
Migrates from custom Python-based nREPL client to babashka mcp-nrepl for faster, more maintainable live coding workflow. Updates architecture to use external SuperCollider instead of embedded server.

Key changes:
- Replace nrepl-send.py/sh with mcp-nrepl.bb calls in all scripts
- Update dependencies: Clojure 1.12.0, Leipzig 0.10.0, Overtone 0.16.3331
- Switch from boot-internal-server to connect-server for external scsynth
- Add .mcp.json for Claude Code integration
- Document dual workflow: shell scripts for performance, Claude for development

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>